--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                         <a class="page-scroll" href="#services">on the iphone</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">on the mac</a>
+                        <a class="page-scroll coming-soon" href="#">on the mac</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">on social media</a>
+                        <a class="page-scroll coming-soon" href="#">on social media</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">on the browser</a>
+                        <a class="page-scroll coming-soon" href="#">on the browser</a>
                     </li>
                 </ul>
             </div>
@@ -88,21 +88,13 @@
                     <h2 class="section-heading">Why you want to do this</h2>
                     <hr class="light">
                     <p class="text-faded">How you do this, What would be amazing if Apple/FB/Twitter would allow this</p>
-                    <a href="#" class="btn btn-default btn-xl wow tada">10 Steps</a>
+                    <a href="#services" class="page-scroll btn btn-default btn-xl wow tada">Let's start</a>
                 </div>
             </div>
         </div>
     </section>
 
     <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">On the iPhone</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -137,7 +129,7 @@
         </div>
     </section>
 
-
+<!-- 
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -148,7 +140,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
