--- a/index.html
+++ b/index.html
@@ -2,40 +2,31 @@
 <html lang="en">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Be Present</title>
-
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-
     <!-- Custom Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
-
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 </head>
 
 <body id="page-top">
-
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -48,7 +39,6 @@
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">Be Present</a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
@@ -70,7 +60,6 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
-
     <header>
         <div class="header-content">
             <div class="header-content-inner">
@@ -80,7 +69,6 @@
             </div>
         </div>
     </header>
-
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
@@ -93,24 +81,35 @@
             </div>
         </div>
     </section>
-
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
+                <div class="col-md-8 col-md-offset-2 text-center">
                     <div class="service-box">
                         <img class="wow bounceIn icon" src="icons/badges.png">
-                        <h3 class="text-left">Only Get Notifications for what matters
-</h3>
+                        <h3 class="text-left">Only Get Notifications for what matters</h3>
                         <p class="text-muted text-left">Only get notified when people need your attention. Getting fewer notifications, less often, means we feel compelled to check less often. Red badges often make people feel the need to “clear” them immediately - remove the badges, and there’s less to do</p>
+                        <h4 class="text-left">For Messaging apps (Messages, WhatsApp, FB Messenger, WeText, Line)</h4>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox">Turn off all badges except from people (but turn off for email)
+                            </label>
+                             <label>
+                                <input type="checkbox">Turn off all app notifications (especially email), but not for messages (Text, WhatsApp)
+
+                            </label>
+                             <label>
+                                <input type="checkbox">Don’t show on Lock Screen
+                            </label>
+
+
+                        </div>
                     </div>
                 </div>
-                
             </div>
         </div>
     </section>
-
-<!-- 
+    <!-- 
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -122,21 +121,16 @@
             </div>
         </div>
     </section> -->
-
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
     <script src="js/wow.min.js"></script>
-
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
-
 </body>
 
 </html>
