--- a/index.html
+++ b/index.html
@@ -60,6 +60,28 @@
         </div>
         <!-- /.container-fluid -->
     </nav>
+    <div class="modal fade onThePhoneModal" id="emailModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title" id="exampleModalLabel">You are on the phone</h4>
+          </div>
+          <div class="modal-body">
+             <div class="form-group">
+              We can remind you to open this page on your computer.
+             </div>
+              <div class="form-group">
+                <input type="text" name="mail" class="form-control mail" type="email" placeholder="you@domain.com">
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary submit" data-dismiss="modal">Remind me</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <header>
         <div class="header-content">
             <div class="header-content-inner">
