--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               We can remind you to open this page on your computer.
              </div>
               <div class="form-group">
-                <input type="text" name="mail" class="form-control mail" type="email" placeholder="you@domain.com">
+                <input name="mail" class="form-control mail" type="email" placeholder="you@domain.com">
               </div>
           </div>
           <div class="modal-footer">
