--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css">
     <!-- Plugin CSS -->
     <link rel="stylesheet" href="css/animate.min.css" type="text/css">
+    <link rel="stylesheet" href="css/jquery.fullPage.css" type="text/css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -82,55 +83,57 @@
       </div>
     </div>
 
-    <header>
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1>Be present</h1>
-                <hr>
-                <p>10 Changes to Live a Less Distracting Life with Your Phone</p>
-            </div>
-        </div>
-    </header>
-    <section class="bg-primary" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Why you want to do this</h2>
-                    <hr class="light">
-                    <p class="text-faded">How you do this, What would be amazing if Apple/FB/Twitter would allow this</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl wow tada">Let's start</a>
+    <div id="fullpage">
+        <header class="section">
+            <div class="header-content">
+                <div class="header-content-inner">
+                    <h1>Be present</h1>
+                    <hr>
+                    <p>10 Changes to Live a Less Distracting Life with Your Phone</p>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="services">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2 text-center">
-                    <div class="service-box">
-                        <img class="wow bounceIn icon" src="icons/badges.png">
-                        <h3 class="text-left">Only Get Notifications for what matters</h3>
-                        <p class="text-muted text-left">Only get notified when people need your attention. Getting fewer notifications, less often, means we feel compelled to check less often. Red badges often make people feel the need to “clear” them immediately - remove the badges, and there’s less to do</p>
-                        <h4 class="text-left">For Messaging apps (Messages, WhatsApp, FB Messenger, WeText, Line)</h4>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox">Turn off all badges except from people (but turn off for email)
-                            </label>
-                             <label>
-                                <input type="checkbox">Turn off all app notifications (especially email), but not for messages (Text, WhatsApp)
+        </header>
+        <section class="bg-primary section" id="about">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <h2 class="section-heading">Why you want to do this</h2>
+                        <hr class="light">
+                        <p class="text-faded">How you do this, What would be amazing if Apple/FB/Twitter would allow this</p>
+                        <a href="#services" class="page-scroll btn btn-default btn-xl wow tada">Let's start</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="services" class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 text-center">
+                        <div class="service-box">
+                            <img class="wow bounceIn icon" src="icons/badges.png">
+                            <h3 class="text-left">Only Get Notifications for what matters</h3>
+                            <p class="text-muted text-left">Only get notified when people need your attention. Getting fewer notifications, less often, means we feel compelled to check less often. Red badges often make people feel the need to “clear” them immediately - remove the badges, and there’s less to do</p>
+                            <h4 class="text-left">For Messaging apps (Messages, WhatsApp, FB Messenger, WeText, Line)</h4>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox">Turn off all badges except from people (but turn off for email)
+                                </label>
+                                 <label>
+                                    <input type="checkbox">Turn off all app notifications (especially email), but not for messages (Text, WhatsApp)
 
-                            </label>
-                             <label>
-                                <input type="checkbox">Don’t show on Lock Screen
-                            </label>
+                                </label>
+                                 <label>
+                                    <input type="checkbox">Don’t show on Lock Screen
+                                </label>
 
 
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <!-- 
     <section id="contact">
         <div class="container">
@@ -150,6 +153,7 @@
     <!-- Plugin JavaScript -->
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/jquery.fittext.js"></script>
+    <script src="js/jquery.fullPage.js"></script>
     <script src="js/wow.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
