--- a/index.html
+++ b/index.html
@@ -140,7 +140,46 @@ Ready? Change these settings in less than five minutes..</p>
                         <p class="description">The read receipt in iMessage tells you when (and if) someone has read the iMessage you sent them. It’s useful. 
                         </p><p>
 But, it’s also a privacy issue because if you don’t want the other person to know that you read their message, this feature is going to play havoc in that plan.</p>
-                        <p class="location">Settings > Messages</p>
+                        <p class="location">Settings > Messages </p>
+
+                        
+                    </div>
+                     <div class="col-md-4 col-md-offset-1">
+                        <img src="img/settings.png" class="img-responsive screenflow">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="bg-dark section">
+           <div class="container">
+                <div class="row">
+                    <div class="col-md-2 col-md-offset-5">
+                        <img src="icons/badges.png" class="img-responsive">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h2 class="heading">Only get notified for what matters</h2>
+                        <p class="description">Only get notifications and interruptions when people need your attention urgently. Remove red badges to avoid stress.
+                        </p>
+                        <p class="location">
+Getting fewer notifications, less often, means we feel compelled to check less often. Removing red badges on apps (except for urgent messages) creates less unnecessary stress and obligations. Now we only visit apps when we choose to, instead of when they want.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+         <section class="bg-light section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-7">
+                        <h2 class="section-heading">Social Media Notifications</h2>
+                        <p class="description">Social media apps are actually companies whose business model is maximizing the amount of time you spend in them – so their job is to invent as many reasons as possible to bring you back. Turn off notifications so you only go to these apps <strong>when you choose</strong>, instead of when they want you. 
+                        </p><p>
+If you really want notifications for specific things like direct messages, turn off all notifications for your account except those.</p>
+                        <p class="location">Settings > Notifications > Facebook, Instagram, Twitter, LinkedIn, YouTube </p>
 
                         
                     </div>
