--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Ready? Change these settings in less than five minutes..</p>
             </div>
         </section>
 
-        <section class="bg-dark section hidden">
+        <section class="bg-dark section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-2 col-md-offset-5 text-center">
